extract UTGB design themes

--- a/utgb-core/src/main/webapp/browser.html
+++ b/utgb-core/src/main/webapp/browser.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="StyleSheet" href="style/utgb.css" type="text/css">
+<link rel="StyleSheet" href="theme/style/utgb.css" type="text/css">
 <title>UTGB Browser</title>
 </head>
 <noscript>
