moved OldViewXML test package, and add Transparent background image generator
--HG--
rename : utgb-core/src/main/java/org/utgenome/gwt/utgb/client/view/OldViewXML.java => utgb-core/src/main/java/org/utgenome/config/OldViewXML.java
rename : utgb-core/src/test/java/org/utgenome/gwt/utgb/OldViewXMLTest.java => utgb-core/src/test/java/org/utgenome/config/OldViewXMLTest.java
rename : utgb-core/src/test/java/org/utgenome/gwt/utgb/bed.xml => utgb-core/src/test/java/org/utgenome/config/bed.xml

--- a/utgb-core/src/main/webapp/ribbon.html
+++ b/utgb-core/src/main/webapp/ribbon.html
@@ -1,6 +1,20 @@
 <html>
 <head>
+<!--
 <link rel="StyleSheet" href="theme/style/utgb.css" type="text/css">
+-->
+<style type="text/css">
+.label
+{
+  background-color: rgba(62,100,119,0.8);
+  text-overflow: ellipsis;
+  overflow:hidden;
+  white-space:nowrap;
+  display: block;
+  color: white;
+}
+</style>
+
 <title>UTGB Browser</title>
 </head>
 <noscript>
@@ -14,4 +28,4 @@ Please enable JavaScript by changing your browser options, then <a href="">try a
  <span id="loading">Loading... </span>
  <div id="utgb-main"></div>
 </body>
-</html> 
+</html>  
