--- a/utgb-core/src/main/webapp/browser.html
+++ b/utgb-core/src/main/webapp/browser.html
@@ -1,18 +1,90 @@
-<html>
+<html lang="en">
 <head>
-<link rel="StyleSheet" href="theme/style/utgb.css" type="text/css">
-<title>UTGB Browser</title>
-</head>
-<noscript>
+    <meta charset="utf-8">
+    <title>UTGB Core</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Le styles -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <style type="text/css">
+      body {
+        padding-top: 40px;
+        padding-bottom: 40px;
+      }
+      .sidebar-nav {
+        padding: 9px 0;
+      }
+    </style>
+	<link href="theme/style/utgb.css" rel="stylesheet">
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <noscript>
 <p>JavaScript must be enabled in order for you to use this web site. However, it seems JavaScript is either disabled or not supported by your browser. 
 Please enable JavaScript by changing your browser options, then <a href="">try again</a>.
 </noscript>
 
-<div class="utgb">
- <script language="javascript" src="utgb.nocache.js"></script>
- <iframe id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
- <span id="loading">Loading... </span>
- <div id="utgb-main"></div>
-</div>
+    <!-- Le fav and touch icons -->
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+  </head>
 
-</html> 
+  <body>
+
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="./">UTGB</a>
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li class="active"><a href="./"><i class="icon-home icon-white"></i> Home</a></li>
+              <li><a href="browser.html"><i class="icon-eye-open icon-white"></i> Browse</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
+
+       <div class="utgb">
+         <script language="javascript" src="utgb.nocache.js"></script>
+        <iframe id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
+        <span id="loading">Loading... </span>
+        <div id="utgb-main"></div>
+       </div>
+     
+      <hr>
+      <footer>
+        <p>Powered by <a href="http://utgenome.org">UTGB Toolkit</a>. University of Tokyo</p>
+      </footer>
+    
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap-transition.js"></script>
+    <script src="js/bootstrap-alert.js"></script>
+    <script src="js/bootstrap-modal.js"></script>
+    <script src="js/bootstrap-dropdown.js"></script>
+    <script src="js/bootstrap-scrollspy.js"></script>
+    <script src="js/bootstrap-tab.js"></script>
+    <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/bootstrap-popover.js"></script>
+    <script src="js/bootstrap-button.js"></script>
+    <script src="js/bootstrap-collapse.js"></script>
+    <script src="js/bootstrap-carousel.js"></script>
+    <script src="js/bootstrap-typeahead.js"></script>
+
+  </body>
+</html>
