Supress db access errors

--- a/utgb-core/src/main/webapp/browser.html
+++ b/utgb-core/src/main/webapp/browser.html
@@ -10,9 +10,11 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
     <style type="text/css">
-      body {
+      body .utgb {
         padding-top: 40px;
-        padding-bottom: 40px;
+      }
+      .navbar-fixed-top {
+        margin-bottom: 0px;
       }
       .sidebar-nav {
         padding: 9px 0;
@@ -34,9 +36,7 @@ Please enable JavaScript by changing your browser options, then <a href="">try a
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
   </head>
-
-  <body>
-
+  
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
@@ -56,7 +56,7 @@ Please enable JavaScript by changing your browser options, then <a href="">try a
       </div>
     </div>
 
-
+	<body>
        <div class="utgb">
          <script language="javascript" src="utgb.nocache.js"></script>
         <iframe id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
