--- a/utgb-core/src/main/webapp/browser.html
+++ b/utgb-core/src/main/webapp/browser.html
@@ -58,7 +58,7 @@ Please enable JavaScript by changing your browser options, then <a href="">try a
 
 	<body>
        <div class="utgb">
-         <script language="javascript" src="utgb/utgb.nocache.js"></script>
+         <script language="javascript" src="utgb.nocache.js"></script>
         <iframe id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
         <span id="loading">Loading... </span>
         <div id="utgb-main"></div>
